--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
    <main>
     <h1>hello!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, quod? Placeat quisquam repellendus odio magni vitae, impedit hic reiciendis aperiam nesciunt praesentium quia dicta dolore illum, corrupti dolorum sint nemo?</p>
    </main> 
 </body>
 </html>
