--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, quod? Placeat quisquam repellendus odio magni vitae, impedit hic reiciendis aperiam nesciunt praesentium quia dicta dolore illum, corrupti dolorum sint nemo?</p>
     <a href="connecter"></a>
     <button>telecharger</button>
+    <h2>les modifications de git-github</h2>
    </main> 
 </body>
 </html>
